fix: fixed jumping layout when toggling switch

--- a/src/components/Gameboy/OneColumn.module.scss
+++ b/src/components/Gameboy/OneColumn.module.scss
@@ -1,6 +1,10 @@
 .gameboy {
-  width: 156px;
+  width: 130px;
   position: relative;
+
+  @media only screen and (min-width: 1440px) {
+    //width: 156px;
+  }
 
   @media only screen and (max-width: 1240px) {
     width: 120px;
@@ -14,6 +18,7 @@
 
 .gameboy svg {
   position: absolute;
+  right: -25px;
 }
 
 .startDown svg {
