--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -16,6 +16,10 @@ body {
   width: 100vw;
   overflow: hidden;
 
+  @media only screen and (max-width: 1050px) {
+    justify-content: left;
+  }
+
   @media only screen and (max-width: 768px) {
     flex-direction: column;
     align-items: center;
@@ -23,21 +27,15 @@ body {
 }
 
 .first {
+  display: flex;
+  justify-content: end;
   height: 100vh;
-  padding-left: 10vw;
-
-  @media only screen and (max-width: 1240px) {
-    padding-left: 15vw;
-  }
-
-  @media only screen and (max-width: 1050px) {
-    padding-left: 35vw;
-  }
+  width: 15vw;
+  min-width: 140px;
 
   @media only screen and (max-width: 768px) {
     width: 100vw;
     height: 160px;
-    padding: 0;
   }
 }
 
@@ -48,6 +46,10 @@ body {
 .firstInactive {
   background: #c9c5ca;
 
+  @media only screen and (max-width: 768px) {
+    width: 100vw;
+  }
+
   div svg {
     display: none;
   }
@@ -57,7 +59,6 @@ body {
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin-right: auto;
 
   @media only screen and (max-width: 1240px) {
     margin-right: 0;
@@ -100,6 +101,8 @@ body {
 }
 
 .gameboyRow {
+  width: 0;
+
   @media only screen and (max-width: 768px) {
     display: block;
     width: 100vw;
